# postgres-practice

./: main.py  pyexercises.ipynb  pyproject.toml
