[tool.poetry]
name = "postgres-world"
version = "0.1.0"
description = ""
authors = ["Tzvi Friedman <tadwork@gmail.com>"]
readme = "README.md"
packages = [{include = "postgres_world"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1.9"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
